# Halow_Simulator

./: CMakeLists.txt  README.md  builder.sh  plot.py  run_nsta_sweep.sh  scenario.json  scenario_base.json
configs/: phy_s1g_mcs.csv
include/sim/: Rng.h  Simulator.h  Time.h
include/util/: Csv.h  Json.h  Result.h  Str.h
include/wifi/: Aggregation.h  BlockAck.h  Edca.h  Energy.h  McsDb.h  Medium.h  Node.h  Packet.h  Phy.h  Propagation.h  Raw.h  Stats.h  Traffic.h  Types.h
src/: Edca.cc  main.cc
